# xfconf

./: .gitignore  configure.ac.in
common/: Makefile.am
xfconf/: Makefile.am  libxfconf-0.metadata  xfconf-cache.c  xfconf-cache.h  xfconf-channel.c
xfconfd/: Makefile.am
